Modifying colors and fixing htts issue

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <link rel="canonical" href="https://lashmapbeautystudio.com/">
   <meta charset="utf-8">
   <title>LashMap Beauty Studio</title>
   <base href="/">
